@@ -158,14 +158,6 @@ GLint viewPort2[10];
 int screenWidth=1;
 int screenHeight=1;
 int clipPlane = 0;
-#define DEFAULT_NEARPLANE 0.1
-#define DEFAULT_FARPLANE 21000.0
-double nearPlane=DEFAULT_NEARPLANE; 			/* near Clip plane - MAKE SURE that statusbar is not in front of this!! */
-double farPlane=DEFAULT_FARPLANE;			/* a good default value */
-double screenRatio=1.5;
-double fieldofview=45.0;
-double calculatedNearPlane = 0.0;
-double calculatedFarPlane = 0.0;
 
 struct X3D_Node* CursorOverSensitive=NULL;	/*  is Cursor over a Sensitive node?*/
 struct X3D_Node* oldCOS=NULL;			/*  which node was cursor over before this node?*/
@@ -278,24 +270,8 @@ void EventLoop() {
 	/* calculate the near and far planes. Do this every 4 times through the EventLoop, just
 	   so we don't get oscillations - 4 times is enough to ensure that geometry is written
 	   more than once, so that we do get a good idea of where things are */
-	if (loop_count & 0x03 == 0) {
-	/* for calculating the near/far plane */
-		/* printf ("eventLoop cnearPlane %lf, cfarPlane %lf\n",calculatedNearPlane, calculatedFarPlane); */
-		/* our setExtent calculations are rough - so if things are closer than the DEFAULT_FARPLANE, make
-		   the z-buffer calculations quite rigid. */
-		if (calculatedNearPlane > DEFAULT_FARPLANE) nearPlane = calculatedNearPlane; else nearPlane = DEFAULT_NEARPLANE;
-		if (calculatedFarPlane > DEFAULT_FARPLANE) farPlane = calculatedFarPlane; else farPlane = DEFAULT_FARPLANE;
-	
-		/* and, if we do not have much in the way of geometry, we can end up with something silly, so: */
-		if (nearPlane > farPlane) { nearPlane = DEFAULT_NEARPLANE; farPlane = DEFAULT_FARPLANE;
-			/* printf ("silly numbers, so using DEFAULT_NEARPLANE and DEFAULT_FARPLANE\n"); */
-		}
-	
-		calculatedNearPlane = 999999999999999999999999.9;
-		calculatedFarPlane = 0.0;
-		/* printf ("eventLoop after bounding, nearPlane %lf, farPlane %lf\n",nearPlane, farPlane); 
-	} else {
-		printf ("skipping calculating planes\n"); */
+	if ((loop_count & 0x03) == 0) {
+		getViewpointExamineDistance();
 	}
 
 	/* Set the timestamp */
